........S. [ZBX-7204] fixed timestamp order of events generated during network discovery (igors)

--------------------------------------------------------------------------------
Changes for 2.2.5rc1

New features:
..F....... [ZBX-8278] prepared frontend for mbstring.internal_encoding ini option deprecation in php 5.6+ (Andrejs)

Bug fixes:
...G...... [ZBX-8248] fixed vfs.file.regexp, vfs.file.regmatch and web.page.regexp to handle carriage returns properly (Juris)
..F....... [ZBX-8285] fixed widget "History of events" and frontend messaging to use visible host names (Krists)
A.F....... [ZBX-8151] fixed XXE vulnerability on XML import using obsolete libxml versions; thanks to pnig0s@Freebuf for the report (Andrejs)
..F....... [ZBX-8354] removed period in caption for "Distribution of values for multiple periods" bar report (Andrejs)
.......PS. [ZBX-8092] fixed items being polled at the same time after host becomes enabled (asaveljevs)
.......PS. [ZBX-8324] fixed there being too many expressions in a list in a SQL query (asaveljevs)
...G...... [ZBX-8373] fixed the argument to system.cpu.num[] being ignored on HP-UX (asaveljevs)

--------------------------------------------------------------------------------
Changes for 2.2.4

2.2.4rc4 was released as 2.2.4 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.4rc4

New features:
A.F....... [ZBX-1357] updated Japanese translation; thanks to Zabbix translators (Richlv)

Bug fixes:
...G...... [ZBX-8213] fixed possible crash when processing eventlog on Windows 2000,2003,XP (wiper)

--------------------------------------------------------------------------------
Changes for 2.2.4rc3

Bug fixes:
..F....... [ZBX-8358] fixed overview screen elements being displayed incorrectly after refreshing (Pavels)
A.F....... [ZBX-8334] fixed selecting group prototypes in HostPrototype::get() using Oracle backend (Andrejs)