@@ -392,7 +392,7 @@ class CApplicationManager {
 	 * @return array
 	 */
 	protected function getChildHostsFromApplications(array $applications, array $hostIds = array()) {
-		$hostsTemapltesMap = array();
+		$hostsTemplatesMap = array();
 
 		$sqlWhere = empty($hostIds) ? '' : ' AND '.dbConditionInt('ht.hostid', $hostIds);
 		$dbCursor = DBselect(
@@ -402,10 +402,10 @@ class CApplicationManager {
 				$sqlWhere
 		);
 		while ($dbHost = DBfetch($dbCursor)) {
-			$hostsTemapltesMap[$dbHost['hostid']] = $dbHost['templateid'];
+			$hostsTemplatesMap[$dbHost['hostid']] = $dbHost['templateid'];
 		}
 
-		return $hostsTemapltesMap;
+		return $hostsTemplatesMap;
 	}
 
 	/**
